Style Navbar Dropdowns. - Remove default link styles on header and footer of dropdown menus - Fix __username dropdown so that it doesn't rely on :checked / toggle to be visible - Fix bottom-border style so that border stays same size on and off :hover

--- a/source/scss/molecules/_dropdown.scss
+++ b/source/scss/molecules/_dropdown.scss
@@ -320,7 +320,6 @@
                 $text-color: $pe-color-white
             );
             @include pe-font-sizing-h6();                        
-            border-bottom: 0;
             border-radius: 0 0 6px 6px;        
             text-decoration: none;    
         }
