--- a/source/scss/molecules/_navbar.scss
+++ b/source/scss/molecules/_navbar.scss
@@ -90,10 +90,25 @@
             display: none;
         }
 
-        &__notifications {
+        &__notifications, 
+        &__username {
             &.dropdown--navbar {
                 @include nav-item();
                 @include nav-item-hover-style();
+
+                .dropdown__menu-header > a, 
+                .dropdown__menu-footer > a {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    color: $pe-color-white;
+                    text-decoration: none;
+                }
+            }
+        }
+
+        &__notifications {
+            &.dropdown--navbar {
                 @include span(3 of 12);            
 
                 &::before {
@@ -130,8 +145,6 @@
         // __username --> .dropdown  
         &__username {
             &.dropdown--navbar {
-                @include nav-item();
-                @include nav-item-hover-style();
                 @include span(12);
 
                 &::before {
@@ -280,15 +293,8 @@
                         width: span(9);
                     }
 
-                    .dropdown__toggle {     
-                        display: none;
-
-                        &:checked + .dropdown__menu {
-                            display: block;
-                        }                 
-                    }
-
-                    .dropdown__menu {  
+                    .dropdown__menu {
+                        display: block;  
                         top: 70px;
                         // left: -50%;
                         left: -(span(6));            
